force-app/main/default/objects/cgcloud__Query_Definition__mdt/cgcloud__Query_Definition__mdt.object-meta.xml
<CustomObject>
    <description>A custom metadata that represent a SOQL query</description>
    <label>Query Definition</label>
    <pluralLabel>Query Definitions</pluralLabel>
</CustomObject>