force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Context_Object__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Context_Object__c</fullName>
    <description>Denotes context object that this query definition will have access to. This will allow the use of External
Parameter types.</description>
    <label>Context Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment__c</fullName>
            </value>
            <value>
                <fullName>Tactic__c</fullName>
            </value>
            <value>
                <fullName>Promotion__c</fullName>
            </value>
            <value>
                <fullName>Fund_Transaction_Header__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>