force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Debug__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether this Query Definition is in debug mode for extended error logs</description>
    <inlineHelpText>Check this to have enhanced debug information.</inlineHelpText>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>