force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Field_Columns__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Columns__c</fullName>
    <label>Field Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>