force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Hidden_Field_Columns__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Hidden_Field_Columns__c</fullName>
    <description>A set of field names that lets the Selection Grid know to not show these column with such fieldnames</description>
    <inlineHelpText>Fields configured here will still be loaded into the Selection Grid, but is not shown to the user.
Use end of line to separate each Field API Name. 
Ensure that there is no whitespace</inlineHelpText>
    <label>Hidden Field Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>