force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Is_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Fieldset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the Field Columns entry is a fieldset or manual entry for field columns</description>
    <inlineHelpText>Check this if what is entered in Field Columns is a fieldset name.</inlineHelpText>
    <label>Is Fieldset</label>
    <type>Checkbox</type>
</CustomField>