force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Name__c</fullName>
    <description>Name for the Query Definition. Not to be confused with DeveloperName.</description>
    <inlineHelpText>This is not the DeveloperName!</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>