force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Query_Footer__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Query_Footer__c</fullName>
    <description>Allows for statements AFTER the Where Clause.</description>
    <inlineHelpText>Example: GROUP BY field1, field2 SORT BY field1 ASC</inlineHelpText>
    <label>Query Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>