force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization__c</fullName>
    <label>SalesOrg</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0002</fullName>
            </value>
            <value>
                <fullName>0003</fullName>
            </value>
            <value>
                <fullName>0004</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>