force-app/main/default/objects/cgcloud__Query_Definition__mdt/fields/cgcloud__sObjectType__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__sObjectType__c</fullName>
    <label>sObjectType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tactic__c</fullName>
                <default>true</default>
                <label>Tactic__c</label>
            </value>
            <value>
                <fullName>Promotion__c</fullName>
            </value>
            <value>
                <fullName>Promotion_Template__c</fullName>
            </value>
            <value>
                <fullName>Tactic_Template__c</fullName>
            </value>
            <value>
                <fullName>Fund__c</fullName>
            </value>
            <value>
                <fullName>Fund_Template__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Product__c</fullName>
                <label>Product2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>